// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataStreamSecurityItem component should render default view with inherited security 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-6 css-1f8i35a-MuiGrid2-root"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-g46iui-MuiTypography-root-MuiLink-root"
      title="test.jpg"
    >
      test.jpg
    </a>
    <br />
    <span
      class="MuiTypography-root MuiTypography-caption css-1e4ju4k-MuiTypography-root"
    >
      Inherited
    </span>
  </div>
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-6 css-y6fwcd-MuiGrid2-root"
  >
    <div
      class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
      style="width: 100%;"
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-standard MuiFormLabel-colorPrimary MuiFormLabel-filled Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-standard css-5afocb-MuiFormLabel-root-MuiInputLabel-root"
        data-shrink="true"
        id="dsi-security-policy-0-label"
      >
        Test Policy Dropdown Label
        <span
          aria-hidden="true"
          class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-5g2d0z-MuiFormLabel-asterisk"
        >
           *
        </span>
      </label>
      <div
        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl  css-16gkaxk-MuiInputBase-root-MuiInput-root-MuiSelect-root"
        required=""
        validation="value => value ? undefined : _validationErrors.default.validationErrors.required"
      >
        <div
          aria-controls=":r0:"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="dsi-security-policy-0-select"
          class="MuiSelect-select MuiSelect-standard MuiInputBase-input MuiInput-input css-1rxz5jq-MuiSelect-select-MuiInputBase-input-MuiInput-input"
          data-testid="dsi-security-policy-0-select"
          id="dsi-security-policy-0-select"
          role="combobox"
          tabindex="0"
        >
          Theses Assessors
        </div>
        <input
          aria-hidden="true"
          aria-invalid="false"
          aria-labelledby="dsi-security-policy-0-label"
          class="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
          data-analyticsid="dsi-security-policy-0-input"
          data-testid="dsi-security-policy-0-input"
          id="dsi-security-policy-0-input"
          name="test.jpg"
          required=""
          tabindex="-1"
          value="2"
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconStandard css-pqjvzy-MuiSvgIcon-root-MuiSelect-icon"
          data-testid="ArrowDropDownIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DataStreamSecurityItem component should render default view with overridden security 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-6 css-1f8i35a-MuiGrid2-root"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-g46iui-MuiTypography-root-MuiLink-root"
      title="test.jpg"
    >
      test.jpg
    </a>
    <br />
    <span
      class="MuiTypography-root MuiTypography-caption css-1e4ju4k-MuiTypography-root"
    >
      Overridden
    </span>
  </div>
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-6 css-y6fwcd-MuiGrid2-root"
  >
    <div
      class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
      style="width: 100%;"
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-standard MuiFormLabel-colorPrimary MuiFormLabel-filled Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-standard css-5afocb-MuiFormLabel-root-MuiInputLabel-root"
        data-shrink="true"
        id="dsi-security-policy-0-label"
      >
        Test Policy Dropdown Label
        <span
          aria-hidden="true"
          class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-5g2d0z-MuiFormLabel-asterisk"
        >
           *
        </span>
      </label>
      <div
        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl  css-16gkaxk-MuiInputBase-root-MuiInput-root-MuiSelect-root"
        required=""
        validation="value => value ? undefined : _validationErrors.default.validationErrors.required"
      >
        <div
          aria-controls=":r1:"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="dsi-security-policy-0-select"
          class="MuiSelect-select MuiSelect-standard MuiInputBase-input MuiInput-input css-1rxz5jq-MuiSelect-select-MuiInputBase-input-MuiInput-input"
          data-testid="dsi-security-policy-0-select"
          id="dsi-security-policy-0-select"
          role="combobox"
          tabindex="0"
        >
          Theses Assessors
        </div>
        <input
          aria-hidden="true"
          aria-invalid="false"
          aria-labelledby="dsi-security-policy-0-label"
          class="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
          data-analyticsid="dsi-security-policy-0-input"
          data-testid="dsi-security-policy-0-input"
          id="dsi-security-policy-0-input"
          name="test.jpg"
          required=""
          tabindex="-1"
          value="2"
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconStandard css-pqjvzy-MuiSvgIcon-root-MuiSelect-icon"
          data-testid="ArrowDropDownIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DataStreamSecurityItem component should render view for a subsequent file 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-6 css-1f8i35a-MuiGrid2-root"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-g46iui-MuiTypography-root-MuiLink-root"
      title="test.jpg"
    >
      test.jpg
    </a>
    <br />
    <span
      class="MuiTypography-root MuiTypography-caption css-1e4ju4k-MuiTypography-root"
    >
      Overridden
    </span>
  </div>
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-6 css-y6fwcd-MuiGrid2-root"
  >
    <div
      class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
      style="width: 100%;"
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-standard MuiFormLabel-colorPrimary MuiFormLabel-filled Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-standard css-5afocb-MuiFormLabel-root-MuiInputLabel-root"
        data-shrink="true"
        id="dsi-security-policy-2-label"
      >
        Test Policy Dropdown Label
        <span
          aria-hidden="true"
          class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-5g2d0z-MuiFormLabel-asterisk"
        >
           *
        </span>
      </label>
      <div
        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl  css-16gkaxk-MuiInputBase-root-MuiInput-root-MuiSelect-root"
        required=""
        validation="value => value ? undefined : _validationErrors.default.validationErrors.required"
      >
        <div
          aria-controls=":r4:"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="dsi-security-policy-2-select"
          class="MuiSelect-select MuiSelect-standard MuiInputBase-input MuiInput-input css-1rxz5jq-MuiSelect-select-MuiInputBase-input-MuiInput-input"
          data-testid="dsi-security-policy-2-select"
          id="dsi-security-policy-2-select"
          role="combobox"
          tabindex="0"
        >
          Theses Assessors
        </div>
        <input
          aria-hidden="true"
          aria-invalid="false"
          aria-labelledby="dsi-security-policy-2-label"
          class="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
          data-analyticsid="dsi-security-policy-2-input"
          data-testid="dsi-security-policy-2-input"
          id="dsi-security-policy-2-input"
          name="test.jpg"
          required=""
          tabindex="-1"
          value="2"
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconStandard css-pqjvzy-MuiSvgIcon-root-MuiSelect-icon"
          data-testid="ArrowDropDownIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
